//
// Copyright (c) 2000-2018 TeamDev. All rights reserved.
// TeamDev PROPRIETARY and CONFIDENTIAL.
// Use is subject to license terms.
//

syntax = "proto3";

package spine.users.c.signin.identity;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.users.signin";
option java_outer_classname = "IdentityProviderProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/users/identifiers.proto";

// The process manager that communicates with the remote identity provider.
//
// Has no state and no additional logic besides querying identity provider.
//
message RemoteIdentityProvider {
    option (entity).kind = PROCESS_MANAGER;

    RemoteIdentityProviderId id = 1;
}
